Fix mass-uninstall/disable status feedback
The uninstall/disable progress status indicator is overflowing outside
of the modal and mostly not visible. This commit moves it to the modal
body in such a way that it's always visible when intended.

--- a/src/css/scheme/light.scss
+++ b/src/css/scheme/light.scss
@@ -52,6 +52,7 @@ $modal-card-body-background-color: var(--modal-card-body-background-color, $sche
 $modal-card-head-background-color: var(--modal-card-head-background-color, $scheme-background);
 $modal-card-head-border-bottom: 1px solid var(--modal-card-head-border-bottom, $scheme-border);
 $modal-card-foot-border-top: 1px solid var(--modal-card-foot-border-top, $scheme-border);
+$modal-card-title-color: var(--modal-card-title-color, $scheme-text);
 
 $menu-item-color: var(--menu-item-color, $scheme-text);
 $menu-item-hover-background-color: var(--menu-item-hover-background-color, #f5f5f5);
